--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "spectre.css": "^0.5.0",
+    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap-vue": "^1.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
