--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.17.1",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.4.1",
+    "feather-icons": "^4.5.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
